# iree-jit

./: .gitignore  CMakeLists.txt  README.md  compile.sh
samples/jax_lowering/: sample_mlir.py  stablehlo_f32.mlir  stablehlo_f64.mlir
samples/pybamm_expr/: .gitignore  iree_jit_run.sh  pybamm_lower.py
samples/simple_mlir/: simple_mul.mlir  simple_mul_2.mlir
src/: CMakeLists.txt  iree_jit.cpp  iree_jit.hpp  main.cpp
